--- a/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -179,7 +179,7 @@
                                     @if (Model.ImageURL == "null" || Model.ImageURL == "" || Model.AchiverRank == "null" || Model.AchiverRank == "")
                                     {
                                         <img src="~/images/logonew.png" height="90"/>
-                                        <h4 class="card-title pl-3 mb-0" style="color:#024a54">Welcome to HM GROUP OF COMPANY</h4>
+                                        <h4 class="card-title pl-3 mb-0" style="color:#024a54">Welcome to HM GROUP OF COMPANIES</h4>
                                     }
                                     else
                                     {
