--- a/HMGreenCityMLM/Views/AdminProfile/AssociateList.cshtml
+++ b/HMGreenCityMLM/Views/AdminProfile/AssociateList.cshtml
@@ -92,6 +92,8 @@
                                     <th>Mobile No</th>
                                     <th>Email Id</th>
                                     <th>Aadhar Number</th>
+                                    <th>PAN Number</th>
+                                    <th>Aadhar PAN Link Status</th>
                                     <th>Status</th>
                                     <th style="min-width:112px">Green Date</th>
                                     <th style="min-width:112px">Yellow Date</th>
@@ -120,6 +122,8 @@
                                                 <td>@Item.Mobile</td>
                                                 <td>@Item.Email</td>
                                                 <td>@Item.AdharNo</td>
+                                                <td>@Item.PanNo</td>
+                                                <td>@Item.AddharPanStatus</td>
                                                 <td>@Item.Status</td>
 
                                                 <td style="background-color:#D3F7C4">@Item.GreenDate</td>
